Update Screenshot and css
- also add % to battery level

--- a/octoprint_octo4a_battery/templates/octo4a_battery_navbar.jinja2
+++ b/octoprint_octo4a_battery/templates/octo4a_battery_navbar.jinja2
@@ -1,3 +1,6 @@
 <div class="navbar-text">
-    <span id="batteryInfo" data-bind="attr: { title: 'batteryLevel', class: batteryIcon() }, html: batteryLevel() , visible: true"></span>
+    <span id="batteryInfo">
+        <span id="batteryInfoIcon" data-bind="attr: { class: batteryIcon() }, visible: true"> </span>
+        <span id="batteryInfoLevel" data-bind="attr: { title: 'phone battery level' }, text: batteryLevel, visible: true"> </span>
+    </span>
 </div>
