--- a/octoprint_octo4a_battery/static/css/octo4a_battery.css
+++ b/octoprint_octo4a_battery/static/css/octo4a_battery.css
@@ -1,6 +1,12 @@
-/* TODO: Have your plugin's CSS files generated to here. */
-#tab_plugin_octo4a_battery iframe {
-    width: 100%;
-    height: 600px;
-    border: 1px solid #808080;
-  }
+#batteryInfo 
+{
+  
+}
+#batteryInfoIcon
+{
+  
+}
+#batteryInfoLevel 
+{
+  font-weight: bold
+}
