Add basic telegram support
Send messages to the defined telegram chat id at defined battery levels (35,25,15,5)

--- a/octoprint_octo4a_battery/templates/octo4a_battery_settings.jinja2
+++ b/octoprint_octo4a_battery/templates/octo4a_battery_settings.jinja2
@@ -5,4 +5,16 @@
             <input type="text" class="input-block-level" data-bind="value: settings.plugins.octo4a_battery.batteryLevelPath">
         </div>
     </div>
+    <div class="control-group">
+        <label class="control-label">{{ _('telegram bot token') }}</label>
+        <div class="controls">
+            <input type="text" class="input-block-level" data-bind="value: settings.plugins.octo4a_battery.telegramBotToken">
+        </div>
+    </div>
+    <div class="control-group">
+        <label class="control-label">{{ _('telegram chat id') }}</label>
+        <div class="controls">
+            <input type="text" class="input-block-level" data-bind="value: settings.plugins.octo4a_battery.telegramChatID">
+        </div>
+    </div>
 </form>
